--- a/disjob-alert/disjob-alert-email/pom.xml
+++ b/disjob-alert/disjob-alert-email/pom.xml
@@ -23,9 +23,14 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.sun.mail</groupId>
+      <groupId>jakarta.mail</groupId>
+      <artifactId>jakarta.mail-api</artifactId>
+      <version>2.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.angus</groupId>
       <artifactId>jakarta.mail</artifactId>
-      <version>2.0.1</version> <!-- 使用最新版本 -->
+      <version>2.0.3</version>
     </dependency>
   </dependencies>
 
