--- a/disjob-alert/disjob-alert-sms/pom.xml
+++ b/disjob-alert/disjob-alert-sms/pom.xml
@@ -3,11 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>cn.ponfee</groupId>
-    <artifactId>disjob-parent</artifactId>
-    <version>2.1.7-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
+    <artifactId>disjob-alert</artifactId>
+    <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>disjob-alert-sms</artifactId>
