--- a/disjob-alert/pom.xml
+++ b/disjob-alert/pom.xml
@@ -20,7 +20,7 @@
   <modules>
     <module>disjob-alert-api</module>
     <module>disjob-alert-email</module>
-    <module>disjob-alert-lark</module>
+    <module>disjob-alert-im</module>
     <module>disjob-alert-sms</module>
   </modules>
 
