--- a/disjob-reports/pom.xml
+++ b/disjob-reports/pom.xml
@@ -92,6 +92,27 @@
 
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-alert-api</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-alert-email</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-alert-im</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-alert-sms</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>disjob-supervisor</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
