--- a/disjob-alert/disjob-alert-email/pom.xml
+++ b/disjob-alert/disjob-alert-email/pom.xml
@@ -16,24 +16,6 @@
   <description>Distributed job alert email module</description>
   <url>https://github.com/dromara/disjob</url>
 
-  <dependencyManagement>
-    <dependencies>
-      <!-- Jakarta Mail -->
-      <dependency>
-        <groupId>jakarta.mail</groupId>
-        <artifactId>jakarta.mail-api</artifactId>
-        <version>2.1.3</version> <!-- 统一版本 -->
-      </dependency>
-
-      <!-- Jakarta Activation -->
-      <dependency>
-        <groupId>jakarta.activation</groupId>
-        <artifactId>jakarta.activation-api</artifactId>
-        <version>2.1.2</version> <!-- 统一版本 -->
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <dependencies>
     <dependency>
       <groupId>cn.ponfee</groupId>
@@ -41,17 +23,9 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.angus</groupId>
-      <artifactId>jakarta.mail</artifactId>
-      <version>2.0.3</version>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.mail</groupId>
-      <artifactId>jakarta.mail-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.activation</groupId>
-      <artifactId>jakarta.activation-api</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
   </dependencies>
+
 </project>
