remove EnableAlerter class

--- a/disjob-admin/ruoyi-disjob/pom.xml
+++ b/disjob-admin/ruoyi-disjob/pom.xml
@@ -75,8 +75,7 @@
       -->
     </dependency>
 
-    <!-- Alert event send: import many implementation for alert -->
-    <!--
+    <!-- Alert event send: select multiple implementations for alert -->
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-alert-email</artifactId>
@@ -89,7 +88,6 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-alert-sms</artifactId>
     </dependency>
-    -->
   </dependencies>
 
 </project>
