--- a/disjob-samples/disjob-samples-springboot-worker/pom.xml
+++ b/disjob-samples/disjob-samples-springboot-worker/pom.xml
@@ -23,6 +23,12 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-test</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
 
