--- a/disjob-test/pom.xml
+++ b/disjob-test/pom.xml
@@ -31,6 +31,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -39,10 +40,11 @@
     </dependency>
 
 
-    <!-- h2 server & h2 driver class-->
+    <!-- embedded redis-->
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>embedded-redis</artifactId>
+      <version>1.5</version>
     </dependency>
     <!-- embedded mysql-->
     <dependency>
@@ -50,21 +52,17 @@
       <artifactId>mariaDB4j</artifactId>
       <version>2.5.3</version>
     </dependency>
+    <!-- h2 server & h2 driver class-->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <optional>true</optional>
+    </dependency>
     <!-- testcontainers mysql-->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>mysql</artifactId>
-    </dependency>
-    <!-- embedded redis-->
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>embedded-redis</artifactId>
-      <version>1.5</version>
-    </dependency>
-    <!-- testcontainers redis-->
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>testcontainers</artifactId>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
