--- a/disjob-worker/pom.xml
+++ b/disjob-worker/pom.xml
@@ -27,11 +27,15 @@
       <artifactId>disjob-dispatch-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-jsr223</artifactId>
+    </dependency>
     <!-- OS process operate: used by ProcessUtils -->
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna-platform</artifactId>
-      <version>5.16.0</version>
+      <version>5.17.0</version>
     </dependency>
 
     <dependency>
