--- a/disjob-admin/ruoyi-common/pom.xml
+++ b/disjob-admin/ruoyi-common/pom.xml
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
-      <version>${springdoc-openapi-ui.version}</version>
+      <version>1.8.0</version>
     </dependency>
   </dependencies>
 
