--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -22,7 +22,7 @@
 
   <properties>
     <revision>1.0.0-SNAPSHOT</revision>
-    <disjob.version>2.1.9-SNAPSHOT</disjob.version>
+    <disjob.version>2.1.9</disjob.version>
 
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
