--- a/disjob-test/pom.xml
+++ b/disjob-test/pom.xml
@@ -26,6 +26,7 @@
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
+      <optional>true</optional>
     </dependency>
     <!-- used for spring jdbc template -->
     <dependency>
