--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
   </modules>
 
   <properties>
-    <revision>2.1.10</revision>
+    <revision>2.2.0-SNAPSHOT</revision>
 
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
