migrate maven central from ossrh to central.sonatype.com

--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,6 @@
     <system>GitHub</system>
     <url>https://github.com/dromara/disjob/issues</url>
   </issueManagement>
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
 
   <modules>
     <module>disjob-common</module>
@@ -214,6 +204,15 @@
             </executions>
             <configuration>
               <doclint>none</doclint>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.7.0</version>
+            <extensions>true</extensions>
+            <configuration>
+              <publishingServerId>central</publishingServerId>
             </configuration>
           </plugin>
           <plugin>
