--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -32,8 +32,6 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <spring-boot.version>2.7.18</spring-boot.version>
-    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-    <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -101,7 +99,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin.version}</version>
+        <version>3.10.1</version>
         <configuration>
           <encoding>${file.encoding}</encoding>
           <source>${java.version}</source>
