--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     <developer>
       <name>Ponfee</name>
       <email>ponfee.cn@gmail.com</email>
-      <organization>ponfee.cn</organization>
-      <organizationUrl>http://www.ponfee.cn/</organizationUrl>
+      <organization>dromara</organization>
+      <organizationUrl>https://dromara.org/</organizationUrl>
     </developer>
   </developers>
   <scm>
@@ -71,14 +71,6 @@
     <commons-io.version>2.19.0</commons-io.version>
     <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
     <curator-framework.version>5.8.0</curator-framework.version>
-
-    <!-- spring-boot-dependencies [type=pom, scope=import]方式，无法自动引入plugin依赖版本 -->
-    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-    <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
-    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -179,11 +171,11 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>${maven-source-plugin.version}</version>
+            <version>3.2.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
-                <phase>test</phase>
+                <phase>verify</phase>
                 <goals>
                   <goal>jar-no-fork</goal>
                 </goals>
@@ -193,7 +185,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>${maven-javadoc-plugin.version}</version>
+            <version>3.4.1</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -204,15 +196,6 @@
             </executions>
             <configuration>
               <doclint>none</doclint>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.sonatype.central</groupId>
-            <artifactId>central-publishing-maven-plugin</artifactId>
-            <version>0.7.0</version>
-            <extensions>true</extensions>
-            <configuration>
-              <publishingServerId>central</publishingServerId>
             </configuration>
           </plugin>
           <plugin>
@@ -228,6 +211,15 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
+            <version>0.7.0</version>
+            <extensions>true</extensions>
+            <configuration>
+              <publishingServerId>central</publishingServerId>
+            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -247,7 +239,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>${maven-deploy-plugin.version}</version>
+          <version>2.8.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -283,7 +275,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin.version}</version>
+        <version>3.10.1</version>
         <configuration>
           <encoding>${file.encoding}</encoding>
           <source>${java.version}</source>
@@ -297,7 +289,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>${maven-jar-plugin.version}</version>
+        <version>3.2.2</version>
         <configuration>
           <archive>
             <manifest>
@@ -332,7 +324,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin.version}</version>
+        <version>2.22.2</version>
         <configuration>
           <printSummary>true</printSummary>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -342,7 +334,6 @@
         </configuration>
       </plugin>
     </plugins>
-
   </build>
 
 </project>
