--- a/disjob-supervisor/pom.xml
+++ b/disjob-supervisor/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>disjob-dispatch-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-alert-api</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
     <!-- Draw DAG graph image: used by DAGUtils -->
     <dependency>
       <groupId>guru.nidi</groupId>
