--- a/disjob-test/src/main/resources/mysql_conf_override/my.cnf
+++ b/disjob-test/src/main/resources/mysql_conf_override/my.cnf
@@ -1,6 +1,7 @@
 [mysqld]
-skip-grant-tables
+# skip-grant-tables
 character-set-server=utf8mb4
+default-time-zone=+08:00
 
 [mysql]
 default-character-set=utf8mb4
