--- a/disjob-registry/disjob-registry-consul/pom.xml
+++ b/disjob-registry/disjob-registry-consul/pom.xml
@@ -38,6 +38,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>consul</artifactId>
+      <version>1.20.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
