--- a/disjob-registry/disjob-registry-zookeeper/pom.xml
+++ b/disjob-registry/disjob-registry-zookeeper/pom.xml
@@ -55,6 +55,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
+      <version>1.20.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
