--- a/disjob-test/pom.xml
+++ b/disjob-test/pom.xml
@@ -62,6 +62,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>mysql</artifactId>
+      <version>1.20.1</version>
       <optional>true</optional>
     </dependency>
 
