--- a/disjob-admin/ruoyi-disjob/pom.xml
+++ b/disjob-admin/ruoyi-disjob/pom.xml
@@ -58,7 +58,7 @@
     <!-- Registry: select one implementation for server registry -->
     <dependency>
       <groupId>cn.ponfee</groupId>
-      <artifactId>disjob-registry-redis</artifactId>
+      <artifactId>disjob-registry-consul</artifactId>
       <!--
       <artifactId>disjob-registry-database</artifactId>
       <artifactId>disjob-registry-redis</artifactId>
