--- a/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
+++ b/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
@@ -26,35 +26,16 @@ disjob:
     worker-token: 358678bfe34648f68b607036a27c6854
     supervisor-token: 20bb8b7f1cb94dc894b45546a7c2982f
 
-  # registry config
-  registry:
-    redis:
-      # redis registry config
-      namespace: disjob_registry
-      session-timeout-ms: 60000
-
-      # -------- redis db config start --------
-      database: 0
-      connect-timeout: 3000
-      timeout: 5000
-      lettuce:
-        pool:
-          max-active: 32
-          max-idle: 8
-          min-idle: 4
-          max-wait: 5000
-        shutdown-timeout: 5000
-      password: 123456               # redis node auth password
-      #username: node_auth           # redis node auth username(redis 6.x ACL)
-
-      # redis standalone config
-      host: localhost                # redis standalone host name
-      port: 6379                     # redis standalone port
-
-      # redis sentinel config
-      #sentinel:
-      #  master: REDIS_SENTINEL
-      #  nodes: 112.74.170.75:16379,112.74.170.75:16380
-      #  #password: 123456            # redis sentinel auth password
-      #  #username: sentinel_auth     # redis sentinel auth username(redis 6.x ACL)
-      # -------- redis db config end --------
+  # database registry config
+  registry.database:
+    namespace: disjob_registry
+    session-timeout-ms: 60000
+    datasource:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/disjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+      username: disjob
+      password: disjob$123456
+      hikari:
+        minimum-idle: 2
+        maximum-pool-size: 20
+        connection-timeout: 2000
