--- a/disjob-samples/disjob-samples-springboot-supervisor/src/main/resources/application.yml
+++ b/disjob-samples/disjob-samples-springboot-supervisor/src/main/resources/application.yml
@@ -1,2 +1,2 @@
 server.port: 8082
-spring.profiles.include: web,mysql,supervisor,registry-redis
+spring.profiles.include: web,mysql,supervisor,registry-nacos
